[REF] Moved the lines related to data-mobile-tooltip from _tiki-selectors.scss... --- * [REF] Moved the lines related to data-mobile-tooltip from _tiki-selectors.scss... --- * [REF] Moved the lines related to data-mobile-tooltip from _tiki-selectors.scss to _tiki-miscellaneous_global.scss because they contain no variables for themes to provide values for.
See merge request tikiwiki/tiki!6278


(cherry picked from commit ca5be495ef27abfca39c6f102b7c88448b1445ab)

93467bdc [REF] Moved the lines related to data-mobile-tooltip from _tiki-selectors.scss...

Co-authored-by: Gary Cunningham-Lee <gary_c@cunningham-lee.com>

See merge request tikiwiki/tiki!6282

--- a/themes/base_files/scss/_tiki-miscellaneous_global.scss
+++ b/themes/base_files/scss/_tiki-miscellaneous_global.scss
@@ -713,7 +713,7 @@ ul.sm-horizontal {
     visibility: visible;
 }
 
-// Following 78 lines moved from tiki-selectors as they contain no variables
+// Following lines moved from tiki-selectors as they contain no variables
 .permission_table {
     .form-row {
         margin-left: 0; margin-right: 0;
@@ -792,4 +792,29 @@ ul.sm-horizontal {
     #page-data.col-sm-9 { padding-left: 0; padding-right: 0; }
     .syslog-table textarea { min-height: 5.5em; }
     .tiki .ui-dialog { width: 80vw !important; }
+}
+
+[data-mobile-tooltip] {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+[data-mobile-tooltip]::after {
+    content: attr(data-mobile-tooltip);
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+    display: none;
+    z-index: 1;
+}
+
+[data-mobile-tooltip].show-tooltip::after {
+    display: block;
 }
