--- a/themes/base_files/scss/_cypht-tiki.scss
+++ b/themes/base_files/scss/_cypht-tiki.scss
@@ -3,7 +3,6 @@
     color: var(--bs-body-color) !important;
     position: relative;
     overflow-y: hidden;
-    height: 90vh;
     background-color: var(--bs-secondary-bg);
 
     .hide { display: none !important; }
@@ -245,13 +244,11 @@
     .shortcut_table { width: 100%; }
     .app-container {
         padding: 20px;
-        position: absolute;
     }
     .folder_list, .content_cell{
         position: relative;
-        min-height: calc(90vh - 40px);
-        max-height: calc(90vh - 40px);
         overflow-y: auto;
+        border-radius: var(--bs-border-radius);
     }
     .collapsed ul {
         display: inherit;
