[FIX][UI] (BP to master) Limit scope of data-mobile-tooltip selector to small... --- * [FIX][UI] (BP to master) Limit scope of data-mobile-tooltip selector to small... --- * [FIX][UI] (BP to master) Limit scope of data-mobile-tooltip selector to small screens to avoid corrupting Bootstrap dropdown-toggle icon.
See merge request tikiwiki/tiki!6424


(cherry picked from commit d1b2032581f0546fe4b56a66be39bb4773b47220)

93ff4fd4 [FIX][UI] (BP to master) Limit scope of data-mobile-tooltip selector to small...

Co-authored-by: Gary Cunningham-Lee <gary_c@cunningham-lee.com>

See merge request tikiwiki/tiki!6425

--- a/themes/base_files/scss/_tiki-miscellaneous_global.scss
+++ b/themes/base_files/scss/_tiki-miscellaneous_global.scss
@@ -750,6 +750,7 @@ ul.sm-horizontal {
         .input-group-append {
             display: block;
             margin: 0 !important;
+
             .btn {
                 width: 100%;
                 margin-top: 5px;
@@ -759,62 +760,85 @@ ul.sm-horizontal {
     }
 
     .t_navbar {
-        .btn-group { display: inline-block; }
+        .btn-group {
+            display: inline-block;
+        }
     }
 
     .tiki-admin_menu_options {
-        #preview_code { white-space: normal; }
+        #preview_code {
+            white-space: normal;
+        }
     }
 
     .tiki-wizard_admin {
         #wizardBody {
             margin-top: 2em;
-            .media { display: block; margin-top: 1.5rem; }
+
+            .media {
+                display: block;
+                margin-top: 1.5rem;
+            }
         }
     }
 
     .tiki-page_contribution {
-        .wikitext { word-break: break-word; }
+        .wikitext {
+            word-break: break-word;
+        }
     }
 
     .nav-breadcrumb {
         display: block;
+
         .breadcrumb {
             width: 100%;
-            & + form { display: block !important; }
+
+            & + form {
+                display: block !important;
+            }
         }
     }
 
     .tiki-edit_translation, .tiki-edit_structure {
-        .ui-dialog { width: 100% !important; }
+        .ui-dialog {
+            width: 100% !important;
+        }
     }
 
-    #page-data.col-sm-9 { padding-left: 0; padding-right: 0; }
-    .syslog-table textarea { min-height: 5.5em; }
-    .tiki .ui-dialog { width: 80vw !important; }
-}
+    #page-data.col-sm-9 {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .syslog-table textarea {
+        min-height: 5.5em;
+    }
+    .tiki .ui-dialog {
+        width: 80vw !important;
+    }
 
-[data-mobile-tooltip] {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-}
+    [data-mobile-tooltip] {
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+    }
 
-[data-mobile-tooltip]::after {
-    content: attr(data-mobile-tooltip);
-    position: absolute;
-    bottom: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #333;
-    color: #fff;
-    padding: 5px;
-    border-radius: 5px;
-    white-space: nowrap;
-    display: none;
-    z-index: 1;
-}
+    [data-mobile-tooltip]::after {
+        content: attr(data-mobile-tooltip);
+        position: absolute;
+        bottom: 100%;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: #333;
+        color: #fff;
+        padding: 5px;
+        border-radius: 5px;
+        white-space: nowrap;
+        display: none;
+        z-index: 1;
+    }
 
-[data-mobile-tooltip].show-tooltip::after {
-    display: block;
+    [data-mobile-tooltip].show-tooltip::after {
+        display: block;
+    }
 }
